src/objects/QPMS__Process__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This needs to be deleted.</description>
        <label>Defect</label>
        <referenceTo>QPMS__Defect__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Standard_Operational_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipName>Standard_Operational_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Process_Classification__c</fullName>
        <label>Process Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Process_Code__c</fullName>
        <label>Process Code</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Process_Description__c</fullName>
        <label>Process Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Process_Quality__c</fullName>
        <label>Process Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Revision__c</fullName>
        <label>Revision</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Operational Process</fullName>
                </value>
                <value>
                    <fullName>Operational Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>QPMS__All_Processes</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Process_Code__c</columns>
        <columns>QPMS__Type__c</columns>
        <columns>QPMS__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Processes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>